// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/manager/helm/extract updateDependency() upgrades dependency if newValue version value is repeated 1`] = `
"
      dependencies:
        - version: 0.9.0
          name: redis
          repository: https://kubernetes-charts.storage.googleapis.com/
        - name: postgresql
          version: 0.11.0
          repository: https://kubernetes-charts.storage.googleapis.com/
      "
`;

exports[`lib/manager/helm/extract updateDependency() upgrades dependency if valid upgrade 1`] = `
"
      dependencies:
        - name: redis
          version: 0.11.0
          repository: https://kubernetes-charts.storage.googleapis.com/
        - name: postgresql
          version: 0.8.1
          repository: https://kubernetes-charts.storage.googleapis.com/
      "
`;

exports[`lib/manager/helm/extract updateDependency() upgrades dependency if version field comes before name field 1`] = `
"
      dependencies:
        - version: 0.11.0
          name: redis
          repository: https://kubernetes-charts.storage.googleapis.com/
        - name: postgresql
          version: 0.8.1
          repository: https://kubernetes-charts.storage.googleapis.com/
      "
`;
